HTML report: fix line wrap for check description and details

--- a/lemoncheesecake/resources/html/report.css
+++ b/lemoncheesecake/resources/html/report.css
@@ -74,7 +74,7 @@ th, td {
 }
 
 .check_description, .check_result {
-	white-space: pre;
+	white-space: pre-wrap;
 }
 
 .extra-info-container {
